[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ntp-anchor"
version = "0.1.0"
description = "Cross-platform NTP time synchronization package"
readme = "README.md"

license = {file = "LICENSE"}
requires-python = ">=3.12.10"
dependencies = [
    "ntplib>=0.4.0"
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2"
]

[tool.setuptools.packages.find]
where = ["src"]
