[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ntp-anchor"
version = "0.2.0"
description = "Cross-platform NTP time synchronization package"
readme = "README.md"

license = {file = "LICENSE"}
requires-python = ">=3.12.10"
dependencies = [
    "ntplib>=0.4.0"
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-mock"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "9.0.2"
addopts = "-ra -q"
testpaths = [
    "tests"
]
markers = [
    "unit: Core isolated unit tests using mocks.",
    "integration: Tests that interact with the live Windows OS or network dependencies."
]